mesa (22.0~git20220113-1) UNRELEASED; urgency=medium

  * New upstream snapshot.
  * path_max.diff: Refreshed.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 13 Jan 2022 15:23:52 +0200

mesa (21.3.4-1) unstable; urgency=medium

  * New upstream release.
  * control: Switch to libglvnd-core-dev build-dep. (Closes: #1003264)
  * freedreno-afuc-Disable-the-disassembler-on-32-bit-bu.diff: Dropped,
    upstream.
  * Build with llvm-13 again.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 13 Jan 2022 14:35:37 +0200

mesa (21.3.3-1) unstable; urgency=medium

  * New upstream release.
  * rules: Enable turnip, freedreno vulkan driver.
  * freedreno-afuc-Disable-the-disassembler-on-32-bit-bu.diff: Fix ftbfs
    on armhf.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 04 Jan 2022 10:30:13 +0200

mesa (21.3.0-1) experimental; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Nov 2021 16:35:02 +0200

mesa (21.3.0~rc5-1) experimental; urgency=medium

  * New upstream prerelease.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 17 Nov 2021 10:42:29 +0200

mesa (21.3.0~rc1-1) experimental; urgency=medium

  * New upstream prerelease.
  * fix-python-shebang.diff: Dropped, upstream.
  * libgbm1.symbols: Updated.
  * rules: Enable crocus gallium driver. (LP: #1947200)

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 20 Oct 2021 11:40:14 +0300

mesa (21.2.6-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Nov 2021 16:07:58 +0200

mesa (21.2.5-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 03 Nov 2021 11:35:38 +0200

mesa (21.2.4-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 18 Oct 2021 16:50:42 +0300

mesa (21.2.3-2) unstable; urgency=medium

  * Revert back to llvm 12. (Closes: #995835)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 07 Oct 2021 12:30:07 +0300
