@@ -2,6 +2,7 @@ mesa (22.0~git20220113-1) UNRELEASED; urgency=medium
 
   * New upstream snapshot.
   * path_max.diff: Refreshed.
+  * rules: Drop classic drivers.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Thu, 13 Jan 2022 15:23:52 +0200
 
